2009-04-18	Mike Massonnet
Add about dialog

2009-04-16	Mike Massonnet
Init the locale one stage earlier

	- panel-plugin/main.c:
		Call xfce_textdomain() in the preinit callback otherwise the
		error message wouldn't be localisated.


2009-04-16	Mike Massonnet
Prepare for release

2009-04-15	Mike Massonnet
Use a WeakNotify callback... useless but well...

	- panel-plugin/main.c:
		Unref the status icon and move the plugin_save/free calls to a
		WeakNotify callback on the status icon.

2009-04-15	Mike Massonnet
Install autostart file automagically

	- panel-plugin/xfce4-clipman-plugin-autostart.desktop.in,
	panel-plugin/Makefile.am:
		Install a system wide autostart file with Hidden set to true
		by default.
	- panel-plugin/main.c:
		New function install_autostart_file() called after creating
		the status icon to install the autostart file to the user
		config directory (thus at the first run) with the key Hidden
		set automatically to either false or left to true.

2009-04-15	Mike Massonnet
Replace g_idle against g_timeout

	- panel-plugin/main.c(status_icon_register):
		Use g_timeout of 60 seconds instead of g_idle (asap as the main
		loop is idle) since I noticed that logging in with the plugin
		being autostarted and the panel was not yet all run up, the
		plugin quit as it has been reported to be not embedded within
		the notification area.

2009-04-14	Mike Massonnet
Drop startup notification from the desktop entry file

	- xfce4-clipman-plugin.desktop.in:
		Set StartupNotify to false

2009-04-14	Mike Massonnet
Block status icon popup menu if settings dialog is open

	- panel-plugin/main.c(cb_status_icon_popup_menu):
		Don't popup the menu if the settings dialog is open.

2009-04-13	Mike Massonnet
Forgot the desktop entry files

	- panel-plugin/xfce4-clipman-plugin.desktop.in.in,
	xfce4-clipman-plugin.desktop.in:
		Use the new icons in these files aswell.

2009-04-13	Mike Massonnet
Add home-made icon for the touch of personalization
