@@ -1,5 +1,9 @@
 2009-04-16  Mike Massonnet <mmassonnet@xfce.org>
 
+	* *.po: Updated translator-credits for everyone
+
+2009-04-16  Mike Massonnet <mmassonnet@xfce.org>
+
 	* fr.po: French translation update
 	* *.po, *.pot: make update-po
 
