@@ -1,4 +1,7 @@
 2009-04-18	Mike Massonnet
+Update credits for the translator and previous authors
+
+2009-04-18	Mike Massonnet
 Add about dialog
 
 2009-04-16	Mike Massonnet
